--- a/package.json
+++ b/package.json
@@ -11,20 +11,32 @@
   },
   "dependencies": {
     "@farcaster/frame-sdk": "latest",
-    "@farcaster/frame-wagmi-connector": "latest",
     "@farcaster/miniapp-wagmi-connector": "^1.1.0",
+    "@metamask/delegation-toolkit": "^0.13.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "5.45.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "ethers": "^6.15.0",
+    "lucide-react": "^0.546.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.9.4",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.14",
     "viem": "latest",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "wagmi": "latest"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.0",
+    "@types/node": "^24.8.1",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@wagmi/cli": "latest",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.8.3",
     "vite": "^5.2.11"
   }
