--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "clsx": "^2.1.1",
     "ethers": "^6.15.0",
     "lucide-react": "^0.546.0",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
     "viem": "latest",
